--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I am freelance developer. Currently doing more in backend, focused in Python and Django.
-disqus_shortname: stackproblems
+title: ...........HAVOC ERA...........
+description: 欢迎大家来到HAVOC ERA
+author: I HAVOC
+github: https://ihavoc.club
+about: 初学网站搭建，建立自己的网站。
+disqus_shortname: HAVOC ERA
 google_analytics: UA-XXXXXXXX-Y
 avatar_url: /static/img/avatar.jpg
 
@@ -19,13 +19,13 @@ social:
     - icon: fa-facebook
       link: "#"
     - icon: fa-twitter
-      link: "https://twitter.com/agusmakmun6"
+      link: "ihavoc.club"
     - icon: fa-linkedin
-      link: "https://www.linkedin.com/in/summonagus"
+      link: "ihavoc.club"
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://ihavoc.club"
 
 share:
   twitter_username: agusmakmun6
@@ -39,7 +39,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://havocera.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
